--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -357,6 +357,7 @@ form {
 html {
   font-size: 100%;
   max-width: 100%;
+  background-color: #dfdfdf;
 }
 html,
 html a {
@@ -4722,6 +4723,7 @@ blockquote p {
 */
 .divider,
 .parallax {
+  content: "";
   background-repeat: repeat;
   background-position: center center;
   -webkit-background-size: cover;
@@ -4732,9 +4734,11 @@ blockquote p {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: block;
-  position: relative;
+  position: fixed;
   overflow: hidden;
   width: 100%;
+  height: 100%;
+  background-repeat: repeat-y;
 }
 /* -------- Parallax ---------- */
 .parallax {
@@ -5267,6 +5271,11 @@ blockquote p {
   .icon-box.icon-left .icon {
     float: none !important;
     margin-right: 0;
+  }
+  .divider {
+      position: fixed;
+      background-attachment:fixed;
+      background-size: cover;
   }
 }
 .icon-box.icon-left .icon.no-bg {
